--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     volumes:
       - "./config/:/app/config/"
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
+    environment:
+      HOMEPAGE_ALLOWED_HOSTS: "page.home.tastic"
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.homepage.rule=Host(`page.home.tastic`)"
